# PhotoFlow

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CREDITS  Dockerfile  README.md  _config.yml  build-windows.sh  contributors.html  index.html  index.md  install.html  params.json  presets.html  sky_tutorial.html  test.md
data/: CMakeLists.txt  gmic_film_cluts.gmz  photoflow.appdata.xml  photoflow.desktop
data/mime/: x-pfi.xml
data/ocio-configs/filmic-blender-master/: config.ocio
data/pixmaps/: CMakeLists.txt
data/presets/: noise_reduction_1.pfp  sky_enhance.pfp
src/: CMakeLists.txt  main.cc  pfbatch.cc  phf_stack.c  phf_stack.cc  version.cc  version.hh
src/base/: array2d.hh  blend_add.hh  blend_color.hh  blend_darken.hh  blend_divide.hh  blend_exclusion.hh  blend_grain_extract.hh  blend_grain_merge.hh  blend_hard_light.hh  blend_lch.hh  blend_lighten.hh  blend_luminance.hh  blend_luminosity.hh  blend_multiply.hh  blend_normal.hh  blend_overlay.hh  blend_passthrough.hh  blend_screen.hh  blend_soft_light.hh  blend_subtract.hh  blend_vivid_light.hh  blender.hh  cachebuffer.cc  cachebuffer.hh  closedsplinecurve.cc  color.cc  color.hh  condition.hh  curve.cc  curve.hh  exif_data.cc  exif_data.hh  file_util.cc  file_util.hh  fileutils.cc  fileutils.hh  format_info.cc  format_info.hh  iccstore.cc  iccstore.hh  (+47 more)
src/base/icc/: Lab.cc  XYZ.cc  aces.cc  prophoto.cc  prophoto_d65.cc  rec2020.cc  srgb.cc  srgb_d50.cc
src/benchmarks/: CMakeLists.txt  invert.cc  matrix-3x3.cc
src/dt/common/: colorspaces.c  colorspaces.h
src/dt/iop/: clipping.cc  clipping.cc~
src/gui/: doublebuffer.cc  doublebuffer.hh  exportdialog.cc  exportdialog.hh  help.cc  help.hh  histogram.cc  histogram.hh  image_info.cc  image_info.hh  imagearea.cc  imagearea.hh  imagearea_orig.hh  imageeditor.cc  imageeditor.hh  layertree.cc  layertree.hh  layertree_dnd.cc  layerwidget.cc  layerwidget.hh  mainwindow.cc  mainwindow.hh  operation_config_dialog.cc  operation_config_dialog.hh  operation_config_gui.cc  operation_config_gui.hh  operationstree.cc  operationstree.hh  raw_histogram.cc  raw_histogram.hh  sampler.cc  sampler.hh  settingsdialog.cc  settingsdialog.hh  snapshotswidget.cc  snapshotswidget.hh  softproofdialog.cc  softproofdialog.hh  tablabelwidget.hh
src/gui/operations/: basic_adjustments_config.cc  basic_adjustments_config.hh  blur_bilateral_config.cc  blur_bilateral_config.hh  brightness_contrast_config.cc  brightness_contrast_config.hh  channel_mixer_config.cc  channel_mixer_config.hh  clip_config.cc  clip_config.hh  clone_config.cc  clone_config.hh  clone_stamp_config.cc  clone_stamp_config.hh  color_correction_config.cc  color_correction_config.hh  convert_colorspace_config.cc  convert_colorspace_config.hh  crop_config.cc  crop_config.hh  curves_config.cc  curves_config.hh  defringe_config.cc  defringe_config.hh  denoise_config.cc  denoise_config.hh  desaturate_config.cc  desaturate_config.hh  draw_config.cc  draw_config.hh  dynamic_range_compressor_config.cc  dynamic_range_compressor_config.hh  dynamic_range_compressor_config_v2.cc  dynamic_range_compressor_config_v2.hh  gaussblur_config.cc  gaussblur_config.hh  gradient_config.cc  gradient_config.hh  guided_filter_config.cc  guided_filter_config.hh  (+57 more)
src/gui/widgets/: checkbox.cc  checkbox.hh  curveeditor.cc  curveeditor.hh  exposure_slider.cc  exposure_slider.hh  imagebutton.cc  imagebutton.hh  layerlist.cc  layerlist.hh  lensfun_selector.cc  lensfun_selector.hh  numentry.cc  numentry.hh  outmode_slider.cc  outmode_slider.hh  percent_selector.cc  percent_selector.hh  pfwidget.cc  pfwidget.hh  selector.cc  selector.hh  slider.cc  slider.hh  statusindicator.cc  statusindicator.hh  textbox.cc  textbox.hh  toolbutton.cc  toolbutton.hh  vslider.cc  vslider.hh
src/legacy/operations/: brightness_contrast.cc  brightness_contrast_par.hh  brightness_contrast_proc.hh  brightness_contrast_proc_grey.hh  brightness_contrast_proc_lab.hh  brightness_contrast_proc_rgb.hh  hue_saturation.cc  hue_saturation.hh  operations.cc  raw_developer.cc  raw_developer.hh  raw_output.cc  raw_output.hh  raw_preprocessor.cc  raw_preprocessor.hh
src/operations/: amaze_demosaic.cc  amaze_demosaic.hh  basic_adjustments.cc  basic_adjustments.hh  blender.cc  blender.hh  blur_bilateral.cc  blur_bilateral.hh  blur_bilateral_blur.hh  blur_bilateral_slice.hh  blur_bilateral_slow.cc  blur_bilateral_slow.hh  blur_bilateral_splat.hh  brightness_contrast.cc  brightness_contrast.hh  brightness_contrast_par.hh  brightness_contrast_proc.hh  brightness_contrast_proc_grey.hh  brightness_contrast_proc_lab.hh  brightness_contrast_proc_rgb.hh  buffer.cc  buffer.hh  ca_correct.cc  ca_correct.hh  channel_mixer.cc  channel_mixer.hh  clahe.cc  clahe.hh  clip.cc  clip.hh  clipping_warning.cc  clipping_warning.hh  clone.cc  clone.hh  clone_stamp.cc  clone_stamp.hh  color_correction.cc  color_correction.hh  convert2lab.cc  convert2lab.hh  (+162 more)
src/operations/CTMF/: ctmf.c  ctmf.h
src/operations/Filmic/: LICENSE.txt  README.md
src/operations/OCIO/: ocio_aces.cc  ocio_aces.hh  ocio_config.cc  ocio_config.hh  ocio_filmic.cc  ocio_filmic.hh
src/operations/gmic/: blur_bilateral.cc  blur_bilateral.cc~  blur_bilateral.hh  blur_bilateral.hh~  convolve.cc  convolve.hh  denoise.cc  denoise.hh  denoise_gmic.cc  dream_smooth.cc  dream_smooth.hh  emulate_film.cc  emulate_film.hh  emulate_film_bw.cc  emulate_film_bw.hh  emulate_film_colorslide.cc  emulate_film_colorslide.hh  emulate_film_instant_consumer.cc  emulate_film_instant_consumer.hh  emulate_film_instant_pro.cc  emulate_film_instant_pro.hh  emulate_film_negative_color.cc  gcd_despeckle.cc  (+56 more)
src/plugin/: CMakeLists.txt  file-formats.h  pfgimp-load.cc  pfgimp.cc  pluginwindow.cc  pluginwindow.hh
src/tests/: CMakeLists.txt  cast.c  draw.cc  draw2.cc  gmic.cc  gmic_test.cc  gmic_test.cpp  gtkdisp2.cc  icc.c  local_laplacian_filters.cc  rawsave.c  refcount.cc  scrollwin.cc  unprocessed_raw.cc  vector.cc
src/vips/: clone_stamp.cc  introspect.c  layer.cc  lensfun.cc  perspective.cc  sinkscreen_pf.c  tilecache_pf.c  vips2openexr.cc  vips_layer.h
(+359 files in other folders)
